--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,17 @@
         <jmh.version>1.20</jmh.version>
         <junit.version>5.1.0</junit.version>
         <junit.platform.version>1.1.0</junit.platform.version>
+        <tests>perf</tests>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>benchmarks</id>
+            <properties>
+                <tests>func</tests>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencyManagement>
         <dependencies>
@@ -67,6 +77,12 @@
             <version>${jmh.version}</version>
             <scope>test</scope>
         </dependency>
+        <!--reactor-->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.1.5.RELEASE</version>
+        </dependency>
         <!--additional useful stuff-->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -99,7 +115,7 @@
                         <include>**/*TestCase.java</include>
                     </includes>
                     <properties>
-                        <excludeTags>slow</excludeTags>
+                        <excludeTags>${tests}</excludeTags>
                     </properties>
                 </configuration>
                 <dependencies>
